<resources>
    <string name="app_name">SampleAndroidApps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android App Sample</string>
    <string name="nav_header_subtitle">@FORTEgp05</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_top">App Top</string>
    <string name="menu_connpass_event_list">Connpass Event List</string>
    <string name="menu_sqlite_sample_list">SQLite Sample List</string>
    <string name="menu_sqlite_sample_edit">SQLite Sample Edit</string>
    <string name="menu_github_repository_list">Github Repository List</string>
    <string name="sample_data_form_name">Name</string>
    <string name="sample_data_form_memo">Memo</string>
    <string name="sample_data_form_register">登録</string>
    <string name="result_normal">正常に登録できました</string>
    <string name="result_abnormal">登録に失敗しました、再度お試しください</string>
</resources>
