<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="sqliteSampleListData"
            type="com.example.fortegp05.sampleandroidapps.view.fragment.SqliteSampleListFragment" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/show_add_sqlite_data_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:onClickListener="@{sqliteSampleListData.fabClickListner}"
            app:srcCompat="@mipmap/ic_plus" />
    </android.support.constraint.ConstraintLayout>

</layout>
